lib_LTLIBRARIES = libgstg1allocator-@GST_API_VERSION@.la

libgstg1allocator_@GST_API_VERSION@_la_SOURCES = \
	gstg1allocator.c

libgstg1allocator_@GST_API_VERSION@includedir = $(includedir)/gstreamer-@GST_API_VERSION@/gst/g1/
libgstg1allocator_@GST_API_VERSION@include_HEADERS = \
	gstg1allocator.h

libgstg1allocator_@GST_API_VERSION@_la_CFLAGS = $(G1_CFLAGS) $(GST_CFLAGS) 
libgstg1allocator_@GST_API_VERSION@_la_LIBADD = $(G1_LIBS) $(GST_LIBS) 